--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+<!--添加thymeleaf-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>index</title>
 </head>
 <body>
-alert("hello");
+<script>
+    alert("hello index！！");
+</script>
+hello index！！
+</table>
 </body>
 </html>
