--- a/src/main/resources/templates/person-index.html
+++ b/src/main/resources/templates/person-index.html
@@ -4,12 +4,10 @@
       xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>个人信息</title>
 </head>
 <body>
 <script>
-    var name=${person.id};
-
 </script>
 <form action="queryById">
     请输入id：<input name="id">
