--- a/src/main/resources/templates/person-index.html
+++ b/src/main/resources/templates/person-index.html
@@ -10,13 +10,17 @@
 <script>
 </script>
 <form action="queryById">
-    请输入id：<input name="id">
+    请输入id：
+    <label>
+        <input name="id">
+    </label>
     <input type="submit" value="查询">
+
 </form>
 <form action="queryAll">
     <input type="submit" value="查询所有">
 </form>
-<table border="1">
+<table>
     <tr>
         <th>ID</th>
         <th>姓名</th>
