验证mybatis多表联查（1对多）

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,10 @@
     显示所有账户信息。
 </a>
 <p></p>
+<a href="PersonAccount">
+    显示所有人员及账户信息。
+</a>
+<p></p>
 <a th:href="@{https://www.e-learn.cn/thymeleaf/}">thymeleaf</a>
 <form>
 
