测试http的get，post方式

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
     查找人员
 </a>
 <p></p>
+<!--这种超链接方式只能使用get模式提交-->
 <a href="persons">
     显示所有人员
 </a>
@@ -25,7 +26,7 @@
     显示所有账户信息。
 </a>
 <p></p>
-<a href="PersonAccount">
+<a href="PersonAccount" >
     显示所有人员及账户信息。
 </a>
 <p></p>
